added swagger to other api's
